--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ footer{
         </a>
       </div>
       
-      <img src="images/Daco_1888496.png" id="circle" /> 
+      <img src="Daco_1888496.png" id="circle" /> 
       <p style="font-size: 4vw;" align="center">Tejas Ambhore</p>
       <div style="text-align: center;">
       <a href="https://www.facebook.com/tejas.ambhore.77/"><h2 class="center"><i class="fa fa-facebook" ></i> Facebook</h2></a>
@@ -312,7 +312,7 @@ footer{
       <div id="thirdpage">
         <div id="edu">
           
-            <img src="images/Daco_4261611.png" id="iedu"/> 
+            <img src="Daco_4261611.png" id="iedu"/> 
             <h1>Educational Qualifications</h1>
             <h3>Schooling</h3>
             <table class="center">
@@ -352,7 +352,7 @@ footer{
 
         <div id="fourthPage">
           <div id="skills">
-            <img src="images/Daco_2089021.png" id="iskill"/>
+            <img src="Daco_2089021.png" id="iskill"/>
             <h1>SKILLS</h1>
             <table class="center">
               <tr>
