--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@ footer{
         <a href="#skills">Skills</a>
         <a href="#projects">Projects</a>
         <a href="#contact"><i class="fa fa-fw fa-envelope"></i>Contact Me</a>
+          <a href="#"><i class="fa fa-fw fa-download"></i>Download</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
