--- a/index.html
+++ b/index.html
@@ -357,18 +357,11 @@ footer{
           <div id="skills">
             <img src="Daco_2089021.png" id="iskill"/>
             <h1>SKILLS</h1>
+              <h3>Programming Skills</h3>
             <table class="center">
               <tr>
               <th>Skills</th>
               <th>Rating</th>
-              </tr>
-              <tr>
-                <td>Adobe Photoshop</td>
-                <td><span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span></td>
               </tr>
               <tr>
                 <td>C language</td>
@@ -404,6 +397,29 @@ footer{
               </tr>
               
             </table>
+              <h3>Software Skills</h3>
+              <table class="center">
+                  <th>Skills</th>
+              <th>Rating</th>
+              </tr>
+              <tr>
+                <td>Adobe Photoshop</td>
+                <td><span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span></td>
+              </tr>
+              <tr>
+                <td>Adobe Illustrator</td>
+                <td><span class="fa fa-star checked"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span>
+                  <span class="fa fa-star"></span></td>
+              </tr>
+              </table>
+              
             </div>
             </div>
 
