--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ footer{
 
         <div id="fourthPage">
           <div id="skills">
-            <img src="images/Daco_2089021.png" id="iskill"/>
+            <img src="Daco_2089021.png" id="iskill"/>
             <h1>SKILLS</h1>
             <table class="center">
               <tr>
