--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ footer{
         </a>
       </div>
       <div id="firstPage">
-      <img src="Daco_1888496.png" id="circle" /> 
+      <img src="1618029884872.jpg" id="circle" /> 
       <p style="font-size: 4vw;" align="center">Tejas Ambhore</p>
       <div style="text-align: center;">
       <a href="https://www.facebook.com/tejas.ambhore.77/" style="color: black;"><h2 class="center"><i class="fa fa-facebook" ></i> Facebook</h2></a>
